Rename GatewayClassController to prevent name collision (#2317)
* Rename GatewayClassController to prevent name collision

* Use gateway instead of gatewayclass in name

* Use the constant in ownership checks

* Change GatewayClass name to "consul"

* Change GatewayClass name in cases

* Change ApiGatewayClass back

--- a/acceptance/tests/fixtures/bases/api-gateway/gatewayclass.yaml
+++ b/acceptance/tests/fixtures/bases/api-gateway/gatewayclass.yaml
@@ -6,7 +6,7 @@ kind: GatewayClass
 metadata:
   name: gateway-class
 spec:
-  controllerName: "hashicorp.com/consul-api-gateway-controller"
+  controllerName: "consul.hashicorp.com/gateway-controller"
   parametersRef:
     group: consul.hashicorp.com
     kind: GatewayClassConfig
