--- a/charts/consul/templates/gateway-resources-job.yaml
+++ b/charts/consul/templates/gateway-resources-job.yaml
@@ -41,9 +41,9 @@ spec:
             - consul-k8s-control-plane
           args:
             - gateway-resources
-            - -gateway-class-name=consul-api-gateway
+            - -gateway-class-name=consul
             - -gateway-class-config-name=consul-api-gateway
-            - -controller-name=hashicorp.com/consul-api-gateway-controller
+            - -controller-name=consul.hashicorp.com/gateway-controller
             - -app={{template "consul.name" .}}
             - -chart={{template "consul.chart" .}}
             - -heritage={{ .Release.Service }}
