--- a/charts/consul/templates/api-gateway-controller-deployment.yaml
+++ b/charts/consul/templates/api-gateway-controller-deployment.yaml
@@ -57,6 +57,7 @@ spec:
       containers:
       - name: api-gateway-controller
         image: {{ .Values.apiGateway.image }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         ports:
         - containerPort: 9090
           name: sds
@@ -219,6 +220,7 @@ spec:
       {{- if .Values.global.acls.manageSystemACLs }}
       - name: copy-consul-bin
         image: {{ .Values.global.image | quote }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         command:
         - cp
         - /bin/consul
@@ -256,6 +258,7 @@ spec:
         {{- end}}
         {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 8 }}
         image: {{ .Values.global.imageK8S }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         volumeMounts:
         - mountPath: /consul/login
           name: consul-data
