--- a/charts/consul/templates/enterprise-license-job.yaml
+++ b/charts/consul/templates/enterprise-license-job.yaml
@@ -124,6 +124,7 @@ spec:
       initContainers:
       - name: ent-license-acl-init
         image: {{ .Values.global.imageK8S }}
+        imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         command:
           - "/bin/sh"
           - "-ec"
