--- a/charts/consul/templates/gateway-resources-job.yaml
+++ b/charts/consul/templates/gateway-resources-job.yaml
@@ -37,6 +37,7 @@ spec:
       containers:
         - name: gateway-resources
           image: {{ .Values.global.imageK8S }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
           command:
             - consul-k8s-control-plane
           args:
