--- a/charts/consul/templates/server-acl-init-job.yaml
+++ b/charts/consul/templates/server-acl-init-job.yaml
@@ -307,13 +307,10 @@ spec:
             {{- end }}
             {{- end }}
             {{- end }}
+        {{- if .Values.global.acls.resources }}
         resources:
-          requests:
-            memory: "50Mi"
-            cpu: "50m"
-          limits:
-            memory: "50Mi"
-            cpu: "50m"
+          {{- toYaml .Values.global.acls.resources | nindent 10 }}
+        {{- end }}
       {{- if .Values.global.acls.tolerations }}
       tolerations:
         {{ tpl .Values.global.acls.tolerations . | indent 8 | trim }}
