--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -584,7 +584,7 @@ global:
   # The name (and tag) of the consul-dataplane Docker image used for the
   # connect-injected sidecar proxies and mesh, terminating, and ingress gateways.
   # @default: hashicorp/consul-dataplane:<latest supported version>
-  imageConsulDataplane: "docker.mirror.hashicorp.services/hashicorppreview/consul-dataplane:1.2-dev"
+  imageConsulDataplane: "docker.mirror.hashicorp.services/hashicorppreview/consul-dataplane:1.3-dev"
 
   # Configuration for running this Helm chart on the Red Hat OpenShift platform.
   # This Helm chart currently supports OpenShift v4.x+.
@@ -2108,7 +2108,7 @@ connectInject:
       # @type: string
       nodeSelector: null
 
-      # Toleration settings for gateway pods created with the managed gateway class. 
+      # Toleration settings for gateway pods created with the managed gateway class.
       # This should be a multi-line string matching the
       # [Tolerations](https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/) array in a Pod spec.
       #
@@ -2134,7 +2134,7 @@ connectInject:
         service: null
 
       # This value defines the number of pods to deploy for each Gateway as well as a min and max number of pods for all Gateways
-      deployment: 
+      deployment:
         defaultInstances: 1
         maxInstances: 1
         minInstances: 1
@@ -2554,6 +2554,26 @@ connectInject:
         # Recommended production default: 100m
         # @type: string
         cpu: null
+    # Set default lifecycle management configuration for sidecar proxy.
+    # These settings can be overridden on a per-pod basis via these annotations:
+    #
+    # - `consul.hashicorp.com/enable-sidecar-proxy-lifecycle`
+    # - `consul.hashicorp.com/enable-sidecar-proxy-shutdown-drain-listeners`
+    # - `consul.hashicorp.com/sidecar-proxy-lifecycle-shutdown-grace-period-seconds`
+    # - `consul.hashicorp.com/sidecar-proxy-lifecycle-graceful-port`
+    # - `consul.hashicorp.com/sidecar-proxy-lifecycle-graceful-shutdown-path`
+    # @type: map
+    lifecycle:
+        # @type: boolean
+        defaultEnabled: true
+        # @type: boolean
+        defaultEnableShutdownDrainListeners: true
+        # @type: integer
+        defaultShutdownGracePeriodSeconds: 30
+        # @type: integer
+        defaultGracefulPort: 20600
+        # @type: string
+        defaultGracefulShutdownPath: "/graceful_shutdown"
 
   # The resource settings for the Connect injected init container. If null, the resources
   # won't be set for the initContainer. The defaults are optimized for developer instances of
