NET-4967: Fix helm install when setting copyAnnotations or nodeSelector for apiGateway (#2597)
* Support multiline nodeSelector arg

* Support multiline service annotations arg

* Update test assertions

* Add changelog entry

--- a/charts/consul/templates/gateway-resources-job.yaml
+++ b/charts/consul/templates/gateway-resources-job.yaml
@@ -88,13 +88,15 @@ spec:
             {{- end}}
             {{- end}}
             {{- if .Values.connectInject.apiGateway.managedGatewayClass.nodeSelector }}
-            - -node-selector={{ .Values.connectInject.apiGateway.managedGatewayClass.nodeSelector }}
+            - -node-selector
+            - {{- toYaml .Values.connectInject.apiGateway.managedGatewayClass.nodeSelector | nindent 14 -}}
             {{- end }}
             {{- if .Values.connectInject.apiGateway.managedGatewayClass.tolerations }}
             - -tolerations={{ .Values.connectInject.apiGateway.managedGatewayClass.tolerations }}
             {{- end }}
             {{- if .Values.connectInject.apiGateway.managedGatewayClass.copyAnnotations.service }}
-            - -service-annotations={{ .Values.connectInject.apiGateway.managedGatewayClass.copyAnnotations.service.annotations }}
+            - -service-annotations
+            - {{- toYaml .Values.connectInject.apiGateway.managedGatewayClass.copyAnnotations.service.annotations | nindent 14 -}}
             {{- end }}
             - -service-type={{ .Values.connectInject.apiGateway.managedGatewayClass.serviceType }}
             {{- end}}
