--- a/acceptance/ci-inputs/kind_acceptance_test_packages.yaml
+++ b/acceptance/ci-inputs/kind_acceptance_test_packages.yaml
@@ -3,7 +3,8 @@
 
 - {runner: 0, test-packages: "partitions"}
 - {runner: 1, test-packages: "peering"}
-- {runner: 2, test-packages: "connect snapshot-agent wan-federation"}
-- {runner: 3, test-packages: "cli vault metrics"}
-- {runner: 4, test-packages: "api-gateway ingress-gateway sync example consul-dns"}
-- {runner: 5, test-packages: "config-entries terminating-gateway basic"}
+- {runner: 2, test-packages: "sameness"}
+- {runner: 3, test-packages: "connect snapshot-agent wan-federation"}
+- {runner: 4, test-packages: "cli vault metrics"}
+- {runner: 5, test-packages: "api-gateway ingress-gateway sync example consul-dns"}
+- {runner: 6, test-packages: "config-entries terminating-gateway basic"}
