Added logLevel field for components  (#2302)
* Added logLevel field for components

* Add changelog

* Fix tests

* Rename 2298.txt to 2302.txt

* Address comments

* Fix tests

* Fix helm tests

* Address comments

* Add client and server loglevels

* Fix bats

* Update changelog

* Fix bats tests

--- a/charts/consul/templates/server-config-configmap.yaml
+++ b/charts/consul/templates/server-config-configmap.yaml
@@ -27,6 +27,9 @@ data:
       },
       "datacenter": "{{ .Values.global.datacenter }}",
       "data_dir": "/consul/data",
+      {{- if .Values.server.logLevel }}
+      "log_level": "{{ .Values.server.logLevel | upper }}",
+      {{- end }}
       "domain": "{{ .Values.global.domain }}",
       "limits": {
         "request_limits": {
