--- a/charts/consul/templates/terminating-gateways-deployment.yaml
+++ b/charts/consul/templates/terminating-gateways-deployment.yaml
@@ -196,7 +196,7 @@ spec:
                   -gateway-kind="terminating-gateway" \
                   -proxy-id-file=/consul/service/proxy-id \
                   -service-name={{ .name }} \
-                  -log-level={{ default $root.Values.global.logLevel }} \
+                  -log-level={{ default $root.Values.global.logLevel $root.Values.terminatingGateways.logLevel }} \
                   -log-json={{ $root.Values.global.logJSON }}
           volumeMounts:
             - name: consul-service
@@ -300,7 +300,7 @@ spec:
           {{- if $root.Values.global.adminPartitions.enabled }}
           - -service-partition={{ $root.Values.global.adminPartitions.name }}
           {{- end }}
-          - -log-level={{ default $root.Values.global.logLevel }}
+          - -log-level={{ default $root.Values.global.logLevel $root.Values.terminatingGateways.logLevel }}
           - -log-json={{ $root.Values.global.logJSON }}
           {{- if (and $root.Values.global.metrics.enabled $root.Values.global.metrics.enableGatewayMetrics) }}
           - -telemetry-prom-scrape-path=/metrics
