Use controller-gen 0.8.0 for CRDs (#2684)
- Add missing license headers.

--- a/charts/consul/templates/crd-meshservices.yaml
+++ b/charts/consul/templates/crd-meshservices.yaml
@@ -4,15 +4,16 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.8.0
+  creationTimestamp: null
   name: meshservices.consul.hashicorp.com
-spec:
   labels:
     app: {{ template "consul.name" . }}
     chart: {{ template "consul.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     component: crd
+spec:
   group: consul.hashicorp.com
   names:
     kind: MeshService
@@ -54,4 +55,10 @@ spec:
         type: object
     served: true
     storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 {{- end }}
