--- a/control-plane/config/crd/bases/consul.hashicorp.com_meshservices.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_meshservices.yaml
@@ -6,7 +6,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.8.0
+  creationTimestamp: null
   name: meshservices.consul.hashicorp.com
 spec:
   group: consul.hashicorp.com
@@ -50,3 +51,9 @@ spec:
         type: object
     served: true
     storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
