Automate the k8s sameness tests add peering (#2725)
* added fixtures

* removed fixtures
- intentions only gets added now if acls are enabled
- payment-service-resolver is only for locality aware which isn't in scope for this PR

* updated sameness tests to include peering
- refactored with some helper functions for members (now TestClusters)
- made names more uniform, tend more towards the cluster-01-a/cluster-02-a/etc. nomenclature

* added 4 clusters to cni make target

* disable proxy lifecycle

--- a/acceptance/tests/fixtures/bases/sameness/cluster-02-a-default-ns/sameness.yaml
+++ b/acceptance/tests/fixtures/bases/sameness/cluster-02-a-default-ns/sameness.yaml
@@ -4,12 +4,11 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: SamenessGroup
 metadata:
-  name: mine
+  name: group-01
 spec:
+  defaultForFailover: true
   members:
     - partition: default
-    - partition: ap1
     - peer: cluster-01-a
     - peer: cluster-01-b
-    - peer: cluster-02-a
     - peer: cluster-03-a
