--- a/acceptance/tests/fixtures/bases/sameness/peering/cluster-01-b-dialer/kustomization.yaml
+++ b/acceptance/tests/fixtures/bases/sameness/peering/cluster-01-b-dialer/kustomization.yaml
@@ -2,4 +2,5 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - service-defaults.yaml
+  - peering-dialer-cluster-02-a.yaml
+  - peering-dialer-cluster-03-a.yaml
