--- a/acceptance/tests/fixtures/bases/sameness/peering/cluster-02-a-acceptor/kustomization.yaml
+++ b/acceptance/tests/fixtures/bases/sameness/peering/cluster-02-a-acceptor/kustomization.yaml
@@ -2,4 +2,5 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - service-defaults.yaml
+  - peering-acceptor-cluster-01-a.yaml
+  - peering-acceptor-cluster-01-b.yaml
