--- a/acceptance/tests/fixtures/cases/sameness/static-server/dc3/kustomization.yaml
+++ b/acceptance/tests/fixtures/cases/sameness/static-server/dc3/kustomization.yaml
@@ -2,4 +2,7 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - service-defaults.yaml
+  - ../../../../bases/static-server
+
+patchesStrategicMerge:
+  - patch.yaml
