Net 4889 implement retry feature on the api gateway (#2735)
* squash, add support for retry loops and timeouts to api-gateway NET-4889, NET-4890

* Update .changelog/2735.txt

Co-authored-by: Andrew Stucki <andrew.stucki@hashicorp.com>

* clean up extra files

* delete custom struct, just use client.Object

* delete

* revert kustomization

* lint cleanups

* fix merge reversion, last bit of cleanup

---------

Co-authored-by: Andrew Stucki <andrew.stucki@hashicorp.com>

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -28,6 +28,8 @@ rules:
   - meshservices
   - samenessgroups
   - controlplanerequestlimits
+  - routeretryfilters
+  - routetimeoutfilters
   {{- if .Values.global.peering.enabled }}
   - peeringacceptors
   - peeringdialers
